@@ -3,6 +3,9 @@ Vesrion 1.54:
 		includes long vector support; compiling with long vectors on
 		a modern machine with a modern gcc has yielded a 10-15%
 		speedup
+	- Merged fixes by Greg Childers that enable handling singleton and
+		clique removal for datasets larger then 16GB; after years
+		of frustration this finally fixes the 'large dataset bug'
 	- Fixed errors in MPI block Lanczos (thanks Greg Childers)
 	- NFS Polynomial selection updates from many people:
 		- improved estimate of final e-value
@@ -10,6 +13,8 @@ Vesrion 1.54:
 		- reduced verbosity
 		- search bounds informed by years of mersenneforum work
 	- Removed exit() call from error path in NFS filtering (thanks jrcrombie)
+	- Add support for more modern Visual Studio and CUDA versions 
+		(thanks Brian Gladman)
 	- Made the maximum merge weight configurable (thanks Lionel Debroux)
 	- Updated the makefile to build GPU code for more recent GPUs
 	- Updated CUB version
